@@ -1,3 +1,10 @@
+2002-08-20  Ben Sigelman  <bhsigelm@cs.brown.edu>
+
+	* event-Xt.c (drain_X_queue): loop over while(XEventsQueued())
+	instead of while(XtAppPending()&XtIMXEvent).  Upon a gdm logout,
+	the xemacs process did not exit, but looped infinitely here.  This
+	fixes that problem.
+
 2002-10-04  Stephen J. Turnbull  <stephen@xemacs.org>
 
 	* regex.c (re_match_2_internal): Declare num_nonshy_regs in
